--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+31.01.2005
+- patch from Mateusz Papiernik: Do not show contacts with status `JABBER_STATUS_ERROR'
+  while `Don't show unavailable' option is set. (mkobierzycki/jabber)
+- cleanups. (krzak/core)
+- add esd.m4 (krzak)
+- 'default' for no skin in config combo box (GUI/Thrull)
+- void jabber_change_status(GGaduStatusPrototype *sp, gboolean keep_desc); (mkobierzycki/jabber)
+
+
 26.01.2005
 - skins config update (GUI/THrull)
 - fixed "offline with description" while "private" mode is enabled (gadu-gadu/krzak)
