- patch from Andrzej Kurzeja andyx(at)budorex.com.pl for Tlen.pl status (Tlen)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+01.02.2005
+- patch from Andrzej Kurzeja andyx(at)budorex.com.pl for Tlen.pl status (Tlen)
+
 31.01.2005
 - patch from Mateusz Papiernik: Do not show contacts with status `JABBER_STATUS_ERROR'
   while `Don't show unavailable' option is set. (mkobierzycki/jabber)
