- - fluxbox compatibility and improvements for dockapp plugin by Andrzej Kurzeja ( krzak/dockapp)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+16.02.2005
+- fluxbox compatibility and improvements for dockapp plugin by Andrzej Kurzeja (krzak/dockapp)
+
 04.02.2005
 - automake 1.9, 1.8 and at least unspecified used by autogen sutff (krzak)
 
