irc-style messages in chat window - option (keneda at bohater.net/GUI)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 16.02.2005
 - fluxbox compatibility and improvements for dockapp plugin by Andrzej Kurzeja (krzak/dockapp)
+- irc-style messages in chat window - option (keneda at bohater.net/GUI)
+- Added `Resource' field to `(Contact info)/Software' dialog. (mkobierzycki/Jabber)
+- Show preferences dialog while trying to connect without (jid || password), closes #167 (mkobierzycki/Jabber)
 
 04.02.2005
 - automake 1.9, 1.8 and at least unspecified used by autogen sutff (krzak)
