- close #159 - fonts in chat window (GUI/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+22.02.2005
+- close #159 - fonts in chat window (GUI/krzak)
+
 19.02.2005
 - Added option `Autoconnect with status: FOO' to preferences dialog. (mkobierzycki/jabber)
 
