--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+23.02.2005
+- Applied caching mechanism for current implementation of JEP-0092 (Software
+version). (mkobierzycki/jabber)
+
 22.02.2005
 - close #159 - fonts in chat window (GUI/krzak)
 
