- close #166 - import userlist (gadu-gadu/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+02.03.2005
+- close #166 - import userlist (gadu-gadu/krzak)
+
 01.03.2005
 - font setting for editing text entry by Wiktor Grebla <greblis[at]wp.pl> (GUI)
 
