--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 21.04.2005
-- fixed segfault (autoconnect) traced & patched by Przemyslaw Gregorczyk <francuz86[at]gmail.com> (gadu-gadu)
+- fixed segfault (autoconnect) traced & patched by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu)
 
 13.04.2005
 - added mutex to handle_status_changed(), and other small fixes (GUI/krzak)
