--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+07.05.2005
+- patch for internal libgadu: replace openssl with gnutls (mateusz.kaduk at gmail.com) (gadu-gadu)
+
 21.04.2005
 - fixed segfault (autoconnect) traced & patched by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu)
 
