--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+11.05.2005
+- patch for #177 by bj <foxia at alexandria.cc> (gghist)
+
 07.05.2005
 - patch for internal libgadu: replace openssl with gnutls (mateusz.kaduk at gmail.com) (gadu-gadu)
 
