--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+16.05.2005
+- Uploaded crystal icons set for Jabber plugin. (mkobierzycki)
+
 11.05.2005
 - patch for #177 by bj <foxia at alexandria.cc> (gghist)
 
