- change status patches by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu/tlen/jabber/aawa y)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+17.05.2005
+- change status patches by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu/tlen/jabber/aaway)
+
 16.05.2005
 - Uploaded crystal icons set for Jabber plugin. (mkobierzycki)
 
