--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 17.05.2005
 - change status patches by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu/tlen/jabber/aaway)
+- merged "tlen-classic" iconset into "classic" iconset (krzak)
 
 16.05.2005
 - Uploaded crystal icons set for Jabber plugin. (mkobierzycki)
