--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+19.05.2005
+- Fix for bug report #146 (tlen/mkobierzycki)
+
 17.05.2005
 - change status patches by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu/tlen/jabber/aaway)
 - merged "tlen-classic" iconset into "classic" iconset (krzak)
