default font for gui chat window

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 19.05.2005
 - Fix for bug report #146 (tlen/mkobierzycki)
+- Default fonts for chat window (GUI/THrull)
 
 17.05.2005
 - change status patches by Przemyslaw Grzegorczyk <francuz86[at]gmail.com> (gadu-gadu/tlen/jabber/aaway)
