Changes within iconsets; Thanks go to Piotr Z³ocki.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20.05.2005
+- Changes within iconsets; Thanks go to Piotr Z³ocki. (mkobierzycki)
+
 19.05.2005
 - Fix for bug report #146 (tlen/mkobierzycki)
 - Default fonts for chat window (GUI/THrull)
