--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 20.05.2005
 - Changes within iconsets; Thanks go to Piotr Z³ocki. (mkobierzycki)
+- Fixed bug #170. (core/mkobierzycki)
 
 19.05.2005
-- Fix for bug report #146 (tlen/mkobierzycki)
+- Fix for bugreport #146 (tlen/mkobierzycki)
 - Default fonts for chat window (GUI/THrull)
 
 17.05.2005
