--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.05.2005
+- Fixed bug #141. (GUI/mkobierzycki)
+
 20.05.2005
 - Changes within iconsets; Thanks go to Piotr Z³ocki. (mkobierzycki)
 - Fixed bug #170. (core/mkobierzycki)
