--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,5 @@
 22.05.2005
-- Reworked the way that GtkImhtml widget is used; closes #148.
-(GUI/mkobierzycki)
+- Reworked the way that GtkImhtml widget is used; closes #148.(GUI/mkobierzycki)
 
 21.05.2005
 - Fixed bug #141. (GUI/mkobierzycki)
