--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 14.06.2005
 - A commit for report #203. (jabber/mkobierzycki)
+- Applied patch sent by Przemys³aw Grzegorczyk - report #200.
+(jabber/mkobierzycki)
 
 27.05.2005
 - Fixed #193 (GUI/mkobierzycki)
