--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 22.07.2005
-- Implemented wrapping contacts' descriptions - based on a patch sent by Micha³
-Kazior. (GUI/mkobierzycki)
+- Implemented wrapping contacts' descriptions - based on a patch sent by Micha³ Kazior. (GUI/mkobierzycki)
+- translation update (Aflinta)
+- other fixes
+- 2.2.7 release
 
 16.06.2005
 - gg2-devel.SlackBuild fix (ABOUT-NLS), package creation works for Slamd64 now as well (shasta)
