--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 23.11.2005
 - utf_tlen.patch  close #139 by Przemyslaw Grzegorczyk
-<francuz86[at]@gmail.com> (tlen/krzak)
+<francuz86[at]gmail.com> (tlen/krzak)
+- dbus.patch by Piotr Smyrak (dbus/krzak)
 
 13.10.2005
 - fixed status messages detection when sending SMS to PLUS network,
