- debian/ubuntu package

--- a/debian/gg2.1
+++ b/debian/gg2.1
@@ -3,7 +3,7 @@
 gg2 \(em Gnu Gadu Instant Messaging Client 
 .SH "DESCRIPTION" 
 .PP 
-GNU Gadu 2 is a Gtk2 based instant messenger client based 
+GNU Gadu is a Gtk2 based instant messenger client based 
 on plug-in system, which allows to extend its capabilities. 
 . 
 It was originally designed for using with Gadu-Gadu 
@@ -28,4 +28,4 @@ Permission is granted to copy, distribute and/or modify under
 the terms of the GNU General Public License, Version 2 any  
 later version published by the Free Software Foundation. 
  
-.\" created by instant / docbook-to-man, Mon 17 Jul 2006, 00:06 
+.\" created by instant / docbook-to-man, Wed 19 Jul 2006, 22:36 
