--- a/debian/gghist.1
+++ b/debian/gghist.1
@@ -3,7 +3,7 @@
 gghist \(em History Viewer for Instant Messaging Client 
 .SH "DESCRIPTION" 
 .PP 
-This is a history viewer provied as a plugin for gg2. 
+This is a history viewer provied as a plugin for GNU Gadu. 
  
 .SH "BUG REPORTS" 
 .PP 
@@ -23,4 +23,4 @@ Permission is granted to copy, distribute and/or modify under
 the terms of the GNU General Public License, Version 2 any  
 later version published by the Free Software Foundation. 
  
-.\" created by instant / docbook-to-man, Mon 17 Jul 2006, 00:06 
+.\" created by instant / docbook-to-man, Wed 19 Jul 2006, 22:36 
