--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 gg2 (2.2.9-1) unstable; urgency=low
 
   * 2.2.9
+  * Obsługiwane w głównym drzewie CVS projektu GNU Gadu
+  * tlen włączony
+  * arts wyłączony
+  * esd włączony
+  * pakiet gg2-dev
+  * --with-external-libgadu
 
- -- Marcin Krzyżanowski <krzak@hakore.com>  Thu, 18 Aug 2006 15:47:42 +0200
+ -- Marcin Krzyżanowski <krzak@hakore.com>  Thu, 19 Jul 2006 15:47:42 +0200
 
 gg2 (2.2.7-3) unstable; urgency=low
 
