--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+21.07.2006
+- close #232 (GUI/krzak)
+- update gtkimhtml widget (GUI/krzak)
+
 19.07.2006
 - debian package updated, work with ubuntu. (krzak)
 
