--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+28.09.2006
+- fixed segfault in send_ERA. Patch by Kamil Pawlowski. (sms/shasta)
+
 07.08.2006
 - #261 closed. Patch by Michał Brzozowski. (GUI/krzak)
 
