- fix for autoconnect crash, #257,#256,#258,#260,#267,#275,#273,#274

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 14.10.2006
 - fixed build with new autotools (krzak)
+- fix for autoconnect crash, #257,#256,#258,#260,#267,#275,#273,#274
 
 28.09.2006
 - fixed segfault in send_ERA. Patch by Kamil Pawlowski. (sms/shasta)
