--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gg2 (2.3.0-1) unsable; urgency=low
+
+  * 2.3.0
+  * poprawione kategorie
+
+ -- Marcin Krzyżanowski <krzak@hakore.com>  Sun, 15 Oct 2006 12:17:23 +0200
+
 gg2 (2.2.9-1) unstable; urgency=low
 
   * 2.2.9
