--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+16.10.2006
+- add missing src/plugins/GUI/gtksourceiter.c
+- add missing src/plugins/GUI/gtksourceiter.h
+
 15.10.2006
 - 2.3.0 (krzak)
 
