--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+17.10.2006
+- autotools revolution (krzak)
+- fix locales dir for old autotools (krzak)
+
 16.10.2006
 - add missing src/plugins/GUI/gtksourceiter.c
 - add missing src/plugins/GUI/gtksourceiter.h
